--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/database": "^21.6.1",
     "expo": "~52.0.23",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5"
   },
